--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "bootstrap-sass": "^3.3.7",
     "font-awesome": "^4.6.3",
     "jquery": "^3.1.1",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "vue": "^1.0.28"
   }
 }
