--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "font-awesome": "^4.6.3",
     "jquery": "^3.1.1",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "vue": "^1.0.28"
+    "react-dom": "^15.3.2"
   }
 }
